project(ONAIR_COPY NONE)

set(ONAIR_INSTALL_SUB onair)
set(ONAIR_SOURCE_DIR "onair/")
set(ONAIR_SOURCE_ADDITIONAL
    message_headers.py
    s_o_TLM_CONFIG.json
    s_o.ini
    ../sbn_client/fsw/python_interface/sbn_python_client.py
    )

foreach(TGT ${INSTALL_TARGET_LIST})
    install(DIRECTORY ${ONAIR_SOURCE_DIR} DESTINATION ${TGT}/${INSTALL_SUBDIR}/${ONAIR_INSTALL_SUB} FILES_MATCHING PATTERN "*.py")
    install(DIRECTORY ${ONAIR_SOURCE_DIR} DESTINATION ${TGT}/${INSTALL_SUBDIR}/${ONAIR_INSTALL_SUB} FILES_MATCHING PATTERN "*.txt")
    install(DIRECTORY ${ONAIR_SOURCE_DIR} DESTINATION ${TGT}/${INSTALL_SUBDIR}/${ONAIR_INSTALL_SUB} FILES_MATCHING PATTERN "*.ini")
    install(DIRECTORY ${ONAIR_SOURCE_DIR} DESTINATION ${TGT}/${INSTALL_SUBDIR}/${ONAIR_INSTALL_SUB} FILES_MATCHING PATTERN "*.json")
    install(FILES ${ONAIR_SOURCE_ADDITIONAL} DESTINATION ${TGT}/${INSTALL_SUBDIR}/${ONAIR_INSTALL_SUB})
endforeach()